--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -20,7 +20,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Developer since 2007, always with great interest in solving everyday problems through technology, especially computer programming, using languages for Web, Mobile or Desktop."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>My Resume</title>
+    <title>Luciano Braga's Resume</title>
   </head>
   <body class="bg-neutral-100">
     <!-- Google Tag Manager (noscript) -->
