--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -22,7 +22,7 @@
       name="description"
       content="Developer since 2007, always with great interest in solving everyday problems through technology, especially computer programming, using languages for Web, Mobile or Desktop."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo128.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -37,7 +37,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Luciano Braga's Resume</title>
+    <title>Robson Wendel's Resume</title>
   </head>
   <body class="bg-neutral-100">
     <!-- Google Tag Manager (noscript) -->
